# COAR

./: README.md
conf/: 1.json  1.json.10  1.json.64  core-site.xml  slaves  spark-env.sh  workers
conf/256_n_6_k_4/: ecdag_decode_256_cr_4  ecdag_decode_256_cr_6  ecdag_decode_256_cr_7  ecdag_decode_256_ecpipe_4  ecdag_decode_256_ecpipe_6  ecdag_decode_256_ecpipe_7
conf/384_n_10_k_6/: ecdag_decode_multi_chunk_100_reuse  ecdag_encode_384_3
conf/384_n_9_k_6/: ecdag_decode_384_cr_7  ecdag_decode_384_cr_8  ecdag_decode_384_pipe_6  ecdag_decode_384_pipe_7  ecdag_decode_384_pipe_9  ecdag_decode_384_replication
conf/512_n_12_k_8/: ecdag_decode_512_cr  ecdag_decode_512_cr_10  ecdag_decode_512_cr_11  ecdag_decode_512_cr_8  ecdag_decode_512_pipe  ecdag_decode_512_pipe_10  ecdag_decode_512_pipe_11  ecdag_decode_512_pipe_9  ecdag_decode_512_ppr  ecdag_decode_512_replication  ecdag_encode_512_0  ecdag_encode_512_1  ecdag_encode_512_2  ecdag_encode_512_3  ecdag_encode_512_4
conf/640_n_12_k_10/: ecdag_encode_640_0  ecdag_encode_640_3
conf/640_n_13_k_10/: ecdag_decode_640_ppr_10  ecdag_decode_640_replication  ecdag_encode_640_1
conf/640_n_14_k_10/: ecdag_decode_640_cr_10  ecdag_decode_640_cr_11  ecdag_decode_640_cr_2  ecdag_decode_640_cr_9  ecdag_decode_640_pipe_11  ecdag_decode_640_pipe_12  ecdag_decode_640_pipe_14  ecdag_decode_640_ppr_11  ecdag_decode_640_ppr_12  ecdag_decode_640_ppr_14
conf/640_n_15_k_10/: ecdag_decode_640_cr  ecdag_decode_640_pipe  ecdag_encode_640_2  ecdag_encode_640_4
conf/768_n_16_k_12/: ecdag_decode_768_cr_10  ecdag_decode_768_pipe  ecdag_decode_768_ppr_10  ecdag_encode_768_0  ecdag_encode_768_1  ecdag_encode_768_2  ecdag_encode_768_3
conf/896_n_18_k_14/: ecdag_decode_cr  ecdag_decode_pipe  ecdag_decode_ppr  ecdag_encode_0  ecdag_encode_1  ecdag_encode_2  ecdag_encode_3
ecdag/: monitor.py  run_ecdag.py  start_monitor.sh  stop_monitor.sh
ecdag/coar/: coar_find_best_collector.py  flow.py  idle_busy.py  plan.py  run.py
ecdag/coar_coarse/: plan.py  run.py
ecdag/hpca25/: run.py
ecdag/load_avg/: run.py
ecdag/scheme/: run.py
ecdag/tree/: run.py
ecdag/util/: gf_cost_recorder.py  net_monitor.py  rcb_predictor.py  rs.py  stats.py
script/: ablation.py  all_start_profile.sh  clear.sh  format.sh  parse_sar.py  profile.py  set_bw.sh  start.sh  start_agent.sh  stop.sh  tc.sh  update.sh
script/design2_insight_evaluation/: ecdag_decode_512_cr_10  ecdag_decode_512_cr_7  ecdag_decode_512_cr_8  ecdag_decode_512_cr_9  ecdag_decode_640_cr_10  ecdag_decode_640_cr_11  ecdag_decode_640_cr_12  ecdag_decode_640_cr_13  ecdag_decode_640_cr_9  start_decode.py
script/design3/: cr_design3.py
script/sysstat/resource_profile_data/: sample.csv
script/sysstat/throughput_profile_data/: sample.csv
src/: CMakeLists.txt  ECAgent.cc  ECClient.cc  ECCoordinator.cc
src/common/: CMakeLists.txt  Config.cc  Config.hh  ECInputStream.cc  ECPipe.cc  ECPipeFG.cc  ECWorker.cc  ECWorker.hh
src/ec/: RSPlan.cc
src/protocol/: helloworld.proto
